# stage-zero

./: README.md
basic/basic/: main.cpp
basic/basic.xcodeproj/: project.pbxproj
basic/basic.xcodeproj/project.xcworkspace/xcuserdata/afu.xcuserdatad/: UserInterfaceState.xcuserstate
bazelpracties/: WORKSPACE.bazel
bazelpracties/examples/example01/: BUILD.bazel
bazelpracties/examples/example02/: BUILD.bazel
bazelpracties/java/src/me/ikate/greeter/: BUILD.bazel  Greeter.java
bazelpracties/java/src/me/ikate/main/: BUILD.bazel  Main.java
bazelpracties/python/calculator/: calculator.py
bazelpracties/python/complex-web/: BUILD.bazel
bazelpracties/stage0/: WORKSPACE.bazel  bazel-bin  bazel-out  bazel-stage0  bazel-testlogs
bazelpracties/stage0/python/calculator/: BUILD.bazel  calculator_test.py
bazelpracties/stage0/python/complex-web/: main.py
bazelpracties/swift/: .bazelrc  workspace.bazel
cxxpratices/: CMakeLists.txt
cxxpratices/basics/: person.cpp
cxxpraties/: .bazelrc  .clang-format  CMakeLists.txt
cxxpraties/basics/: CMakeLists.txt  main.cpp
cxxpraties/cmake/libs/: CMakeLists.txt
cxxpraties/cmake/libs/add/: CMakeLists.txt
dartpracties/: README.md  pubspec.yaml
dartpracties/android/app/: build.gradle
dartpracties/android/app/src/main/: AndroidManifest.xml
dartpracties/ios/Runner/: Info.plist
dartpracties/ios/Runner.xcodeproj/: project.pbxproj
dartpracties/linux/: CMakeLists.txt  my_application.cc
dartpracties/macos/Runner.xcodeproj/: project.pbxproj
dartpracties/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
dartpracties/macos/Runner/Configs/: AppInfo.xcconfig
dartpracties/test/: widget_test.dart
dartpracties/web/: index.html  manifest.json
dartpracties/windows/: CMakeLists.txt
dartpracties/windows/runner/: Runner.rc  main.cpp
javaprojects/cloudlearn/: pom.xml
javaprojects/cloudlearn/api-common/: pom.xml
javaprojects/cloudlearn/api-commons/: pom.xml
javaprojects/cloudlearn/consumer-feign-order80/: pom.xml
javaprojects/cloudlearn/consumer-feign-order80/src/main/java/ikate/me/: CustomerFeignOrder.java  Main.java
javaprojects/cloudlearn/consumer-feign-order80/src/main/resources/: application.yml
javaprojects/cloudlearn/consumer-order/: pom.xml
javaprojects/cloudlearn/consumer-order/src/main/java/ikate/me/: ConsumerOrder.java
javaprojects/cloudlearn/consumer-order/src/main/resources/: application.yml
javaprojects/cloudlearn/mybatis_generator/: pom.xml
javaprojects/cloudlearn/mybatis_generator/src/main/resources/: config.properties
javaprojects/cloudlearn/payment_v1/: pom.xml
javaprojects/cloudlearn/payment_v1/src/main/resources/: application.yml  bootstrap.yml
javaprojects/cloudlearn/payment_v1/src/main/resources/mapper/: PayMapper.xml
rustpracties/: readme.md
rustpracties/datastructures/basic/: Cargo.toml
rustpracties/datastructures/basic/src/: main.rs
rustpracties/datastructures/basic/src/line/: array_list.rs
rustpracties/lifetimekata/ex03/: lib.rs
rustpracties/lifetimekata/ex04/: lib.rs
rustpracties/lifetimekata/ex07/: main.rs
rustpracties/little-snippet/: .env  Cargo.toml
rustpracties/little-snippet/src/sql/: db.sql
rustpracties/minigrep/src/: lib.rs  main.rs
rustpracties/miniredis/: Cargo.toml  readme.md
rustpracties/miniredis/examples/: hello-redis.rs
rustpracties/miniserver/src/: hello.html  lib.rs  main.rs
rustpracties/rustling-ex/: quiz1.rs  quiz2.rs
rustpracties/rustling-ex/clippy/: clippy3.rs
rustpracties/rustling-ex/conversions/: as_ref_mut.rs  from_into.rs  from_str.rs  try_from_into.rs
rustpracties/rustling-ex/enums/: enums3.rs
rustpracties/rustling-ex/error_handling/: errors2.rs  errors6.rs
rustpracties/rustling-ex/functions/: functions3.rs
rustpracties/rustling-ex/hashmaps/: hashmaps1.rs  hashmaps2.rs  hashmaps3.rs
rustpracties/rustling-ex/if/: if1.rs
rustpracties/rustling-ex/iterators/: iterators2.rs  iterators4.rs  iterators5.rs
rustpracties/rustling-ex/lifetimes/: lifetimes2.rs
rustpracties/rustling-ex/move_semantics/: move_semantics4.rs
rustpracties/rustling-ex/options/: options2.rs
rustpracties/rustling-ex/primitive_types/: primitive_types2.rs
rustpracties/rustling-ex/smart_pointers/: rc1.rs
rustpracties/rustling-ex/strings/: strings3.rs
rustpracties/rustling-ex/structs/: structs1.rs  structs2.rs  structs3.rs
rustpracties/rustling-ex/threads/: threads1.rs  threads2.rs  threads3.rs
rustpracties/rustling-ex/traits/: traits4.rs  traits5.rs
rustpracties/webserver/: Cargo.toml
rustpracties/webserver/http/src/: httprequest.rs  httpresponse.rs
rustpracties/webserver/httpserver/: Cargo.toml
rustpracties/webserver/httpserver/data/: order.json
rustpracties/webserver/httpserver/src/: handler.rs  router.rs  server.rs
rustpracties/webserver/tcpclient/src/: main.rs
rustpracties/webserver/tcpserver/src/: main.rs
rustpracties/webservice/webservice/: .env  Cargo.toml
rustpracties/webservice/webservice/src/: errors.rs  routers.rs  state.rs
rustpracties/webservice/webservice/src/db_access/: course.rs
rustpracties/webservice/webservice/src/handlers/: course.rs
rustpracties/webservice/webservice/src/models/: course.rs
swiftpracties/: Package.swift  module.bazel
swiftpracties/Sources/: main.swift
swiftpracties/Sources/libs/line/: DynamicArray.swift
swiftpracties/basics/: BUILD.bazel  main.swift
(+38 files in other folders)
