# 引入python规则，13，14行是必须的
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
# Update the SHA and VERSION to the lastest version available here:
# https://github.com/bazelbuild/rules_python/releases.
SHA="84aec9e21cc56fbc7f1335035a71c850d1b9b5cc6ff497306f84cced9a769841"
VERSION="0.23.1"

http_archive(
    name = "rules_python",
    sha256 = SHA,
    strip_prefix = "rules_python-{}".format(VERSION),
    url = "https://github.com/bazelbuild/rules_python/releases/download/{}/rules_python-{}.tar.gz".format(VERSION,VERSION),
)
load("@rules_python//python:repositories.bzl", "py_repositories")
py_repositories()

# 指定python版本，可以解决macOS自带python无法安装包的问题
load("@rules_python//python:repositories.bzl", "python_register_toolchains")

python_register_toolchains(
    name = "python_3_11",
    # Available versions are listed in @rules_python//python:versions.bzl.
    # We recommend using the same version your team is already standardized on.
    python_version = "3.11",
)
load("@python_3_11//:defs.bzl", "interpreter")

# 加载pip的安装包
load("@rules_python//python:pip.bzl", "pip_parse")
pip_parse(
   python_interpreter_target = interpreter,
   name = "python_deps",
   requirements_lock = "//third_party:requirements_lock.txt",
)
load("@python_deps//:requirements.bzl", "install_deps")
install_deps()