[package]
name = "little_snippet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
openssl = { version = "0.10.56", features = ["vendored"] }
serde = { version = "1.0.183", features = ["derive"] }
sqlx = { version = "0.7.1", features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "chrono",
]}
tokio = { version = "1", features = ["full"] }
