load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary", "swift_library")

licenses(["notice"])

swift_binary(
    name = "main",
    srcs = ["main.swift"],
    copts = [
        "-Xfrontend",
        "-serialize-debugging-options",
    ],
)

config_setting(
    name = "debug",
    values = {
        "compilation_mode": "dbg",
    },
)

genrule(
    name = "empty",
    outs = ["empty.swift"],
    cmd = "touch $(OUTS)",
)

swift_library(
    name = "_LocalDebugOptions",
    srcs = [":empty"],
    copts = [
        "-Xfrontend",
        "-serialize-debugging-options",
    ],
    module_name = "_LocalDebugOptions",
    tags = ["no-remote"],
    visibility = ["//visibility:public"],
)
